<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_sort_recent"
                android:title="@string/sort_by_recent"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_sort_name"
                android:title="@string/sort_by_name"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_by_date"
                app:showAsAction="always" />

        </menu>

    </item>

    <item
        android:id="@+id/action_hide_complete"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hide_unfavorite"
        android:checkable="true"
        android:title="@string/hide_unfavorite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_complete"
        android:title="@string/delete_all_completed"
        app:showAsAction="never" />

</menu>